--- a/index.html
+++ b/index.html
@@ -4,6 +4,63 @@
     <title>Tortoiseshell Optics</title>
   </head>
   <body>
+    <header>
+      <img src="resources/img/logo-white.png" alt="white logo">
+      <h1>Tortoiseshell Optics</h1>
 
+      <nav>
+        <ul>
+          <li>Services</li>
+          <li>Products</li>
+          <li>Contact</li>
+        </ul>
+      </nav>
+    </header>
+    <div id="banner">
+      <div id="headline">
+        <h1>DON'T JUST LOOK, SEE.</h1>
+      </div>
+    </div>
+    <div id="products">
+      <div class="product" id="exams">
+        <img src="resources/img/paper-icon.png" alt="paper icon">
+        <p>Comprehensive Exams</p>
+      </div>
+      <div class="product" is="fittings">
+        <img src="resources/img/ruler-icon.png" alt="ruler icon">
+        <p>Custom Fittings</p>
+      </div>
+      <div class="product" id="delivery">
+        <img src="resources/img/truck-icon.png" alt="truck icon">
+        <p>Fast delivery</p>
+      </div>
+    </div>
+    <div id="contact">
+      <div id="philosophy">
+        <div class="title">
+          <span>PHILOSOPHY</span>
+        </div>
+        <div class="description">
+          <p>Over 75% of our brains are dedicated to one sense: vision.
+            We believe everyone deserves to see the world, not matter what.
+            That’s why we offer eye exams, custom fittings, and quick delivery at a low cost.
+            It’s your vision that makes ours.</p>
+        </div>
+      </div>
+      <div id="appointments">
+        <div class="title">
+          <span>APPOINTMENTS</span>
+        </div>
+        <div class="description">
+          <p>Schedule an appointment by calling us at (312) 654-0987.
+            We’re open Tuesday - Saturday, 9AM - 6PM.</p>
+        </div>
+      </div>
+    </div>
+
+    <footer>
+      <img src="resources/img/logo-black.png" alt="black logo">
+      <p>Copyright Tortoiseshell Optics</p>
+    </footer>
   </body>
 </html>
