--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Tortoiseshell Optics</title>
+    <link rel="stylesheet" type="text/css" href="resources/css/style.css">
   </head>
   <body>
     <header>
