--- a/index.html
+++ b/index.html
@@ -6,16 +6,18 @@
   </head>
   <body>
     <header>
-      <img src="resources/img/logo-white.png" alt="white logo">
-      <h1>Tortoiseshell Optics</h1>
+      <div class="container">
+        <img src="resources/img/logo-white.png" alt="white logo">
+        <h1>Tortoiseshell Optics</h1>
 
-      <nav>
-        <ul>
-          <li>Services</li>
-          <li>Products</li>
-          <li>Contact</li>
-        </ul>
-      </nav>
+        <nav>
+          <ul>
+            <li>Services</li>
+            <li>Products</li>
+            <li>Contact</li>
+          </ul>
+        </nav>
+      </div>
     </header>
     <div id="banner">
       <div id="headline">
