Finished styling the navigation.

--- a/index.html
+++ b/index.html
@@ -6,24 +6,24 @@
   </head>
   <body>
     <header>
-      <div class="container">
-        <img src="resources/img/logo-white.png" alt="white logo">
-        <h1>Tortoiseshell Optics</h1>
-
-        <nav>
+      <nav class="container">
+        <div>
+          <img src="resources/img/logo-white.png" alt="white logo">
+          <span>Tortoiseshell Optics</span>
+        </div>
+        <div class="menu">
           <ul>
             <li>Services</li>
             <li>Products</li>
             <li>Contact</li>
           </ul>
         </nav>
+        <div class="flex container">
+        <div id="banner">
+          <h1>DON'T JUST LOOK, SEE.</h1>
+        </div>
       </div>
     </header>
-    <div id="banner">
-      <div id="headline">
-        <h1>DON'T JUST LOOK, SEE.</h1>
-      </div>
-    </div>
     <div id="products">
       <div class="product" id="exams">
         <img src="resources/img/paper-icon.png" alt="paper icon">
