Finished styling the services section.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <img src="resources/img/paper-icon.png" alt="paper icon">
         <p>Comprehensive Exams</p>
       </div>
-      <div class="product" is="fittings">
+      <div class="product" id="fittings">
         <img src="resources/img/ruler-icon.png" alt="ruler icon">
         <p>Custom Fittings</p>
       </div>
