--- a/index.html
+++ b/index.html
@@ -38,26 +38,22 @@
         <p>Fast delivery</p>
       </div>
     </div>
-    <div id="contact">
-      <div id="philosophy">
+    <div class="container" id="contact">
+      <div class="info" id="philosophy">
         <div class="title">
-          <span>PHILOSOPHY</span>
+        PHILOSOPHY
         </div>
-        <div class="description">
-          <p>Over 75% of our brains are dedicated to one sense: vision.
-            We believe everyone deserves to see the world, not matter what.
-            That’s why we offer eye exams, custom fittings, and quick delivery at a low cost.
-            It’s your vision that makes ours.</p>
-        </div>
+        <p>Over 75% of our brains are dedicated to one sense: vision.
+          We believe everyone deserves to see the world, not matter what.
+          That’s why we offer eye exams, custom fittings, and quick delivery at a low cost.
+          It’s your vision that makes ours.</p>
       </div>
-      <div id="appointments">
+      <div class="info" id="appointments">
         <div class="title">
-          <span>APPOINTMENTS</span>
+        APPOINTMENTS
         </div>
-        <div class="description">
-          <p>Schedule an appointment by calling us at (312) 654-0987.
-            We’re open Tuesday - Saturday, 9AM - 6PM.</p>
-        </div>
+        <p>Schedule an appointment by calling us at (312) 654-0987.
+          We’re open Tuesday - Saturday, 9AM - 6PM.</p>
       </div>
     </div>
 
