Completed the desktop part of the website.

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       </div>
     </div>
 
-    <footer>
+    <footer class="container">
       <img src="resources/img/logo-black.png" alt="black logo">
       <p>Copyright Tortoiseshell Optics</p>
     </footer>
