--- a/index.html
+++ b/index.html
@@ -12,13 +12,17 @@
           <span>Tortoiseshell Optics</span>
         </div>
         <div class="menu">
-          <ul>
+          <ul class="regularMenu">
             <li>Services</li>
             <li>Products</li>
             <li>Contact</li>
           </ul>
-        </nav>
-        <div class="flex container">
+          <ul class="mobileMenu">
+            <li>Menu</li>
+          </ul>
+        </div>
+      </nav>
+      <div class="flex container">
         <div id="banner">
           <h1>DON'T JUST LOOK, SEE.</h1>
         </div>
@@ -41,7 +45,7 @@
     <div class="container" id="contact">
       <div class="info" id="philosophy">
         <div class="title">
-        PHILOSOPHY
+          PHILOSOPHY
         </div>
         <p>Over 75% of our brains are dedicated to one sense: vision.
           We believe everyone deserves to see the world, not matter what.
@@ -50,16 +54,16 @@
       </div>
       <div class="info" id="appointments">
         <div class="title">
-        APPOINTMENTS
+          APPOINTMENTS
         </div>
         <p>Schedule an appointment by calling us at (312) 654-0987.
           We’re open Tuesday - Saturday, 9AM - 6PM.</p>
+        </div>
       </div>
-    </div>
 
-    <footer class="container">
-      <img src="resources/img/logo-black.png" alt="black logo">
-      <p>Copyright Tortoiseshell Optics</p>
-    </footer>
+      <footer class="container">
+        <img src="resources/img/logo-black.png" alt="black logo">
+        <p>Copyright Tortoiseshell Optics</p>
+      </footer>
   </body>
 </html>
